--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,7 +6,7 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-- name: Ensure Semaphore path exists
+- name: Ensure Semaphore UI path exists
   ansible.builtin.file:
     path: "{{ item.path }}"
     state: directory
@@ -20,7 +20,7 @@
       state: directory
       when: "{{ semaphore_container_image_customizations_enabled }}"
 
-- name: Ensure Semaphore data paths exist
+- name: Ensure Semaphore UI data paths exist
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -31,7 +31,7 @@
     - "{{ semaphore_data_path }}"
     - "{{ semaphore_tmp_path }}"
 
-- name: Ensure Semaphore support files installed
+- name: Ensure Semaphore UI support files installed
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
     dest: "{{ semaphore_base_path }}/{{ item }}"
@@ -43,7 +43,7 @@
     - labels
     - passwd
 
-- name: Ensure Semaphore container image is pulled via community.docker.docker_image
+- name: Ensure Semaphore UI container image is pulled via community.docker.docker_image
   when: devture_systemd_docker_base_container_image_pull_method == 'ansible-module'
   community.docker.docker_image:
     name: "{{ semaphore_container_image }}"
@@ -55,7 +55,7 @@
   delay: "{{ devture_playbook_help_container_retries_delay }}"
   until: result is not failed
 
-- name: Ensure Semaphore container image is pulled via ansible.builtin.command
+- name: Ensure Semaphore UI container image is pulled via ansible.builtin.command
   when: devture_systemd_docker_base_container_image_pull_method == 'command'
   ansible.builtin.command:
     cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ semaphore_container_image }}"
@@ -77,7 +77,7 @@
         mode: "0640"
       register: semaphore_container_image_customizations_dockerfile_result
 
-    - name: Ensure customized container image for Semaphore is built
+    - name: Ensure customized container image for Semaphore UI is built
       community.docker.docker_image:
         name: "{{ semaphore_container_image_customized }}"
         source: build
@@ -87,7 +87,7 @@
           path: "{{ semaphore_customized_container_src_path }}"
           pull: true
 
-- name: Ensure Semaphore container network is created via community.docker.docker_network
+- name: Ensure Semaphore UI container network is created via community.docker.docker_network
   when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
   community.docker.docker_network:
     enable_ipv6: "{{ devture_systemd_docker_base_ipv6_enabled }}"
@@ -95,7 +95,7 @@
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
 
-- name: Ensure Semaphore container network is created via ansible.builtin.command
+- name: Ensure Semaphore UI container network is created via ansible.builtin.command
   when: devture_systemd_docker_base_container_network_creation_method == 'command'
   ansible.builtin.command:
     cmd: >-
@@ -107,7 +107,7 @@
   changed_when: network_creation_result.rc == 0
   failed_when: network_creation_result.rc != 0 and 'already exists' not in network_creation_result.stderr
 
-- name: Ensure Semaphore systemd service is present
+- name: Ensure Semaphore UI systemd service is present
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/semaphore.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ semaphore_identifier }}.service"
