--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -21,7 +21,7 @@
     - { "old": "semaphore_database_host", "new": "<Replace with semaphore_database_postgres_hostname or semaphore_database_mysql_hostname>" }
     - { "old": "semaphore_environment_variables_extension", "new": "semaphore_environment_variables_additional_variables" }
 
-- name: Fail if required Semaphore settings not defined
+- name: Fail if required Semaphore UI settings not defined
   ansible.builtin.fail:
     msg: >-
       You need to define a required configuration setting (`{{ item }}`).
@@ -42,7 +42,7 @@
 - name: Run if Traefik is enabled
   when: semaphore_container_labels_traefik_enabled | bool
   block:
-    - name: Fail if Traefik settings required for Semaphore are not defined
+    - name: Fail if Traefik settings required for Semaphore UI are not defined
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
