Update uninstall.yml: Make `devture_playbook_runtime_messages_list` integration compatible with ansible-core>=2.19.0
Based on https://github.com/mother-of-all-self-hosting/ansible-role-postgres-backup/commit/008be09fdba34d646159f85b38dfc33fc7355466

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -68,7 +68,7 @@
         devture_playbook_runtime_messages_list | default([])
         +
         [
-          "Note: As the local Semaphore UI instance has been removed, some old data remains in `{{ semaphore_data_path }}`. Feel free to delete it."
+          "Note: As the local Semaphore UI instance has been removed, some old data remains in `" + semaphore_data_path + "`. Feel free to delete it."
         ]
       }}
 
@@ -86,6 +86,6 @@
         devture_playbook_runtime_messages_list | default([])
         +
         [
-          "Note: As the local Semaphore UI instance has been removed, some config data remains in `{{ semaphore_config_path }}`. Feel free to delete it."
+          "Note: As the local Semaphore UI instance has been removed, some config data remains in `" + semaphore_config_path + "`. Feel free to delete it."
         ]
       }}
