Update from 2.15.4 to 2.16.10
2.16.7 has deprecated BoltDB support.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -223,7 +223,7 @@ semaphore_database_postgres_hostname: ''
 semaphore_database_name: semaphore
 
 # Specify database to use
-# Valid values: mysql, postgres, bolt
+# Valid values: sqlite, mysql, postgres
 semaphore_database_dialect: ''
 
 # Specify path to directory where cloned repositories and generated files are stored
