--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -213,7 +213,7 @@ semaphore_username: 'semaphore'
 
 # Specify database to use
 # Valid values: sqlite, mysql, postgres
-semaphore_database_dialect: sqlite
+semaphore_database_type: sqlite
 
 semaphore_database_mysql_username: semaphore
 semaphore_database_mysql_password: ''
