Update validate_config.yml: add tasks related to mailer settings
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-authentik/blob/cec24bdc164ece2fb2cf07d4d656f66abdfc506c/tasks/validate_config.yml.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -65,6 +65,15 @@
     - semaphore_database_postgres_hostname
     - semaphore_database_postgres_password
 
+- name: Fail if SMTP settings are missing (and SMTP is enabled by setting host)
+  ansible.builtin.fail:
+    msg: >-
+      You need to define a required configuration setting (`{{ item }}`) to correctly set up email via SMTP.
+  when: "semaphore_environment_variables_email_host !='' and lookup('vars', item, default='') | string | length == 0"
+  with_items:
+    - semaphore_environment_variables_email_port
+    - semaphore_environment_variables_email_sender
+
 - name: Run if Traefik is enabled
   when: semaphore_container_labels_traefik_enabled | bool
   block:
