--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -49,18 +49,21 @@
         cmd: "rmdir {{ semaphore_config_path }}"
       register: semaphore_config_path_deletion_result
       changed_when: semaphore_config_path_deletion_result.rc == 0
+      failed_when: false
 
     - name: Ensure Semaphore UI local data path does not exist if empty
       ansible.builtin.command:
         cmd: "rmdir {{ semaphore_data_path }}"
       register: semaphore_data_path_deletion_result
       changed_when: semaphore_data_path_deletion_result.rc == 0
+      failed_when: false
 
     - name: Ensure Semaphore UI base path does not exist if empty
       ansible.builtin.command:
         cmd: "rmdir {{ semaphore_base_path }}"
       register: semaphore_base_path_deletion_result
       changed_when: semaphore_base_path_deletion_result.rc == 0
+      failed_when: false
 
     - name: Ensure Semaphore UI container network does not exist via community.docker.docker_network
       when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
