--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -215,7 +215,7 @@ semaphore_systemd_wanted_services_list_custom: []
 semaphore_username: 'semaphore'
 
 # Specify database to use
-# Valid values: sqlite, mysql, postgres
+# Valid values: mysql, postgres, sqlite
 semaphore_database_type: sqlite
 
 semaphore_database_mysql_username: semaphore
