Rename HTTP header having a typo (`Permission-Policy`) and variables related to it
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-vaultwarden/commit/ea1f75ce2a05349b804e23c5ae16817f57fd9233.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -138,7 +138,7 @@ semaphore_container_labels_traefik_additional_response_headers_auto: |
     | combine ({'X-XSS-Protection': semaphore_http_header_xss_protection} if semaphore_http_header_xss_protection else {})
     | combine ({'X-Content-Type-Options': semaphore_http_header_content_type_options} if semaphore_http_header_content_type_options else {})
     | combine ({'Content-Security-Policy': semaphore_http_header_content_security_policy} if semaphore_http_header_content_security_policy else {})
-    | combine ({'Permission-Policy': semaphore_http_header_content_permission_policy} if semaphore_http_header_content_permission_policy else {})
+    | combine ({'Permissions-Policy': semaphore_http_header_permissions_policy} if semaphore_http_header_permissions_policy else {})
     | combine ({'Strict-Transport-Security': semaphore_http_header_strict_transport_security} if semaphore_http_header_strict_transport_security and semaphore_container_labels_traefik_tls else {})
   }}
 semaphore_container_labels_traefik_additional_response_headers_custom: {}
@@ -168,9 +168,9 @@ semaphore_http_header_content_type_options: nosniff
 # See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy
 semaphore_http_header_content_security_policy: frame-ancestors 'self'
 
-# Specifies the value of the `Permission-Policy` header.
-# See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Permission-Policy
-semaphore_http_header_content_permission_policy: "{{ 'interest-cohort=()' if semaphore_floc_optout_enabled else '' }}"
+# Specifies the value of the `Permissions-Policy` header.
+# See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Permissions-Policy
+semaphore_http_header_permissions_policy: "{{ 'interest-cohort=()' if semaphore_floc_optout_enabled else '' }}"
 
 # Specifies the value of the `Strict-Transport-Security` header.
 # See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Strict-Transport-Security
@@ -184,7 +184,7 @@ semaphore_http_header_strict_transport_security: "max-age=31536000; includeSubDo
 # - https://amifloced.org/
 #
 # Of course, a better solution is to just stop using browsers (like Chrome), which participate in such tracking practices.
-# See: `semaphore_content_permission_policy`
+# See: `semaphore_http_header_permissions_policy`
 semaphore_floc_optout_enabled: true
 
 # Controls if HSTS preloading is enabled
