Add environment variable for timezone
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -238,6 +238,9 @@ semaphore_admin_password: ""
 semaphore_admin_name: ""
 semaphore_admin_email: ""
 
+# Specify the timezone
+semaphore_environment_variables_tz: UTC
+
 # Specify the path to serve Semaphore UI.
 # Do not add a trailing /.
 semaphore_environment_variables_web_root: ""
