--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -145,12 +145,15 @@ semaphore_container_labels_traefik_additional_response_headers_custom: {}
 
 # semaphore_container_labels_additional_labels contains a multiline string with additional labels to add to the container label file.
 # See `../templates/labels.j2` for details.
+# To add your own custom labels, use `semaphore_container_labels_additional_labels_custom`
 #
 # Example:
-# semaphore_container_labels_additional_labels: |
+# semaphore_container_labels_additional_labels_custom: |
 #   my.label=1
 #   another.label="here"
-semaphore_container_labels_additional_labels: ""
+semaphore_container_labels_additional_labels: "{{ semaphore_container_labels_additional_labels_auto | combine(semaphore_container_labels_additional_labels_custom) }}"
+semaphore_container_labels_additional_labels_auto: {}
+semaphore_container_labels_additional_labels_custom: {}
 
 # Specifies the value of the `X-XSS-Protection` header
 # Stops pages from loading when they detect reflected cross-site scripting (XSS) attacks.
