--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -148,7 +148,7 @@ semaphore_container_labels_traefik_additional_response_headers_custom: {}
 # To add your own custom labels, use `semaphore_container_labels_additional_labels_custom`
 #
 # Example:
-# semaphore_container_labels_additional_labels_custom: |
+# semaphore_container_labels_additional_labels_custom:
 #   - my.label=1
 #   - another.label="here"
 semaphore_container_labels_additional_labels: "{{ semaphore_container_labels_additional_labels_auto + semaphore_container_labels_additional_labels_custom }}"
