--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,8 @@ semaphore_gid: ""
 # The hostname at which Semaphore UI is served.
 semaphore_hostname: ""
 
+# The path at which Semaphore UI is served.
+# This value must either be `/` or not end with a slash (e.g. `/semaphore`).
 semaphore_path_prefix: /
 
 semaphore_container_image: "{{ semaphore_container_image_registry_prefix }}semaphoreui/semaphore:{{ semaphore_container_image_tag }}"
@@ -90,9 +92,9 @@ semaphore_container_image_registry_prefix_upstream: "{{ semaphore_container_imag
 semaphore_container_image_registry_prefix_upstream_default: docker.io/
 semaphore_container_image_force_pull: "{{ semaphore_container_image.endswith(':latest') }}"
 
-# Controls whether the Semaphore UI container exposes its HTTP port (as defined by `semaphore_container_http_port`).
+# Controls whether the container exposes its HTTP port (tcp/3000 in the container).
 #
-# Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:8731"), or empty string to not expose.
+# Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
 semaphore_container_http_host_bind_port: ""
 
 # The base container network. It will be auto-created by this role if it doesn't exist already.
