--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -157,6 +157,9 @@ semaphore_container_labels_additional_labels: "{{ semaphore_container_labels_add
 semaphore_container_labels_additional_labels_auto: []
 semaphore_container_labels_additional_labels_custom: []
 
+# Specify the size of the container's tmpfs volume
+semaphore_container_tmpfs_tmp_size: 128m
+
 # A list of extra arguments to pass to the container (`docker create` command)
 semaphore_container_extra_arguments: "{{ semaphore_container_extra_arguments_auto + semaphore_container_extra_arguments_custom }}"
 semaphore_container_extra_arguments_auto: []
