--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -95,7 +95,7 @@ semaphore_container_image_force_pull: "{{ semaphore_container_image.endswith(':l
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 semaphore_container_network: "{{ semaphore_identifier }}"
 
-# Controls whether the container exposes its HTTP port (tcp/3000 in the container).
+# Specify how the container publishes its HTTP port (as defined by `semaphore_container_http_port`).
 #
 # Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
 semaphore_container_http_host_bind_port: ""
