--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -94,6 +94,7 @@
     name: "{{ semaphore_container_network }}"
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
+  register: semaphore_network_creation_result
 
 - name: Ensure Semaphore UI container network is created via ansible.builtin.command
   when: devture_systemd_docker_base_container_network_creation_method == 'command'
@@ -103,9 +104,9 @@
       {% if devture_systemd_docker_base_ipv6_enabled %}--ipv6{% endif %}
       {{ devture_systemd_docker_base_container_networks_driver_options_string }}
       {{ semaphore_container_network }}
-  register: network_creation_result
-  changed_when: network_creation_result.rc == 0
-  failed_when: network_creation_result.rc != 0 and 'already exists' not in network_creation_result.stderr
+  register: semaphore_network_creation_result
+  changed_when: semaphore_network_creation_result.rc == 0
+  failed_when: semaphore_network_creation_result.rc != 0 and 'already exists' not in semaphore_network_creation_result.stderr
 
 - name: Ensure Semaphore UI systemd service is present
   ansible.builtin.template:
